--- a/src/templates/base/js.html
+++ b/src/templates/base/js.html
@@ -6,5 +6,7 @@
 <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js" integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6" crossorigin="anonymous"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery-confirm/3.3.2/jquery-confirm.min.js"></script>
 
+<!-- CSRF js -->
+<script src='{% static "js/csrf.ajax.js" %}'></script>
 <!-- ecomm custom JS -->
 <script src='{% static "js/ecommerce.js" %}'></script>
